cf_analysis_results/checkerframework_3.42.0_results/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8.txt
../dataset/june2020_dataset/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/sample/Sample.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ reader $$ java.io.BufferedReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 1929, 1992 ) $$ @MustCall method close may not have been invoked on reader or any of its aliases.
			BufferedReader reader = Files.newBufferedReader(file, charset);
			               ^
  The type of object is: java.io.BufferedReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
1 error
